<resources>
    <string name="app_name">ORHS Interact</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_text">Oak Ridge High School</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signing_up">Sign up</string>
    <string name="signed_out">Signed out</string>
    <string name="interact">Interact</string>
    <string name="messageplease">Please use your ORHS Google Account</string>
    <string name="not_orhs">Not an ORHS account</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="server_client_id">948343105147-9urcqp58vj103jnd66f1g7fuq4ok6oej.apps.googleusercontent.com</string>
    <!-- Google Play Services error for Toast -->`
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Home -->
    <string name="g_9">G$9</string>
    <string name="return34">RETURN</string>
    <string name="hours">HOURS</string>

    <!-- Info -->
    <string name="description">Interact is a service club for young people in Oak Ridge who want to join together to tackle the issues in their community that they care most about. Through Interact, you can carry out hands-on service projects, make new connections, develop leadership skills, and have fun!</string>
    <string name="design">This app was designed by Vasanth Sadhasivan as a member of the Oak Ridge Web and App Development Club in 2015.</string>
    <string name="links">This is an open sourced project, and all of the source code can be found on Github. Make sure to check out WAD Club and its other projects or contribute yourself here:</string>
    <string name="action_settings">Settings</string>
    <string name="title">About Interact</string>
    <string name="get_started_here">Get Started Here</string>
    <string name="join">Join</string>
    <string name="website">Website</string>
    <string name="behind_the_scenes">Behind the Scenes</string>
    <string name="github">Github</string>
    <string name="resources">Resources</string>
    <string name="developers">Developers:</string>
    <string name="developers_names">Vasanth Sadhasivan\nNaveen Gopalan\nBernard Zhao\nDustin Nguyen\nORHS WAD Club\n</string>
    <string name="special_thanks">Special Thanks to:</string>
    <string name="negro900">Stephanie Allen\nShri Shankar\n</string>
    <string name="randeep">Randeep \'The Beast from the East\' Chana</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>