<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
<FrameLayout
    android:id="@+id/main_layout2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/launch">
<ImageView
        android:id="@+id/splash"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/interactlogo"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/interactbackground"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:scaleType="centerCrop"
        android:layout_height="fill_parent"
        android:src="@mipmap/interactbackground_80lightness"
        android:layout_gravity="center_horizontal"
        android:background="@color/launch"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interact"
        android:textColor="@android:color/white"
        android:id="@+id/textView"
        android:textSize="60sp"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/top_margin2"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/interactlogo"
        android:src="@mipmap/interactlogo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="@dimen/top_margin3"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signed_out"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/top_margin4"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/top_margin5"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/top_margin6"
        android:visibility="visible"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="@dimen/top_margin7"
        android:visibility="gone"
        android:weightSum="2"
        tools:visibility="visible">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/sign_out"
            android:textColor="@android:color/white"
            android:background="@drawable/buttons"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/white"
            android:background="@drawable/buttons"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/messageplease"
        android:id="@+id/ohShitBwoi"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/sign_out_and_disconnect"
        android:layout_marginTop="@dimen/top_margin8"

        android:textColor="@android:color/white"
        android:textSize="15.69696969696969696969696969696969dp" />
    </FrameLayout>
</FrameLayout>