<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".Info">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:background="@color/bottomborder" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Home"
                android:onClick="homeClickedInfo"
                android:id="@+id/home_info"
                android:background="@color/bottomborder"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Events"
                android:onClick="eventsClickedInfo"
                android:layout_weight="1"
                android:id="@+id/events_info"
                android:background="@color/bottomborder"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Info"
                android:layout_weight="1"
                android:onClick="infoClickedInfo"
                android:id="@+id/info_info"
                android:background="@color/bottomborder"
                android:textColor="@color/highlight" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:background="@color/background2"
        android:layout_height="fill_parent">
    <LinearLayout
        android:background="@color/background2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Interact"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="35sp"
            android:textColor="@color/text"
            android:id="@+id/header" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="15sp"
            android:textColor="@color/text"
            android:id="@+id/description" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/aboutinteract"
            android:src="@mipmap/aboutinteract"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get Started Here"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:id="@+id/getstarted" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:weightSum="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Join"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/joinbutton"
                android:onClick="joinClickedInfo"
                android:textColor="@color/text"
                android:background="@drawable/buttons" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Website"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center"
            android:id="@+id/websitebutton"
            android:onClick="websiteClickedInfo"
            android:textColor="@color/text"
            android:background="@drawable/buttons" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Behind the Scenes"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="35sp"
            android:textColor="@color/text"
            android:id="@+id/header2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="15sp"
            android:textColor="@color/text"
            android:id="@+id/description2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/aboutWAAD"
            android:onClick="aboutClickedInfo"
            android:src="@mipmap/aboutwaad1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/links"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="15sp"
            android:textColor="@color/text"
            android:id="@+id/links" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:weightSum="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Github"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/githubbutton"
                android:onClick="githubClickedInfo"
                android:textColor="@color/text"
                android:background="@drawable/buttons" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Resources"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:layout_gravity="center"
                android:id="@+id/rescourcesbutton"
                android:onClick="resourcesClickedInfo"
                android:textColor="@color/text"
                android:background="@drawable/buttons" />

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developers:"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:id="@+id/developers" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vasanth Sadhasivan\nBernard Zhao\nDustin Nguyen\nORHS WAD Club\n"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:id="@+id/devdescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Special Thanks to:"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:id="@+id/thanks" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stephanie Allen\nShri Shankar\n"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:id="@+id/description3" />
        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textSize="6sp"
            android:text="Randeep 'The Beast from the East' Chana"
            />

    </LinearLayout>
    </ScrollView>
</LinearLayout>